--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
 <head>
 <title>Maned Mision to Mars</title>
 </head>
+
+
 <body>
 
-</body>
+
 
 <h1>Help me get to Mars</h1>
+
+
+<img src="astro.jpg">
 
 </body>
 
