--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
 <img src="astro.jpg">
 
+<a href ="http://www.nasa.gov/content/nasas-journey-to-mars">look at this link</a>
+
 </body>
 
 </html>
